--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Perfumes Arabes | Natura Scent</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
@@ -14,22 +14,43 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
+<!------
+-header-
+------->
+<header>
+<!-------------------------------------------------
+-navbar (la parte de arriba inicio, carrito, etc.)-
+-------------------------------------------------->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
+<!-----------------------
+-nombre/logo de mi marca-
+------------------------>
     <a class="navbar-brand" href="#">Natura Scent</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+<!------------
+-ul de navbar-
+------------->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+<!-------------
+-btn de inicio-
+-------------->
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Inicio</a>
         </li>
+<!---------------
+-btn del carrito-
+---------------->
         <li class="nav-item">
           <a class="nav-link" href="#">Carrito</a>
         </li>
       </ul>
+<!-------------------------------------
+-la barra de busqueda y btn del navbar-
+-------------------------------------->
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
         <button class="btn btn-outline-success" type="submit">Buscar</button>
@@ -37,42 +58,91 @@
     </div>
   </div>
 </nav>
+<!-----------------------------
+-titulo principal de la pagina-
+------------------------------>
 <h1 class="index-header-h1">Perfumes <span class="index-header-span">Arabes</span></h1>
 </header>
-
+<!----
+-main-
+----->
 <main>
+<!----------------------------------
+-article que contiene los productos-
+----------------------------------->
     <article class="index-main-article">
+<!----------------------------------------------------
+-primer div del article (contiene el primer producto)-
+----------------------------------------------------->
         <div class="index-main-div1"> 
+<!-------------------------------
+-subtitulo (nombre del producto)-
+-------------------------------->
             <h2 class="index-main-h2">Lattafa Khamrah</h2>
+<!----------------
+-img del producto-
+----------------->            
             <a href="index1.html"><img class="index-main-img" src="./img/perfumeArabe01_mejor.png" alt="Lattafa Khamrah Edp"></a>
+<!------
+-precio-
+------->             
             <p class="index-main-p">$49.999</p>
         </div>
-
-         <div class="index-main-div1"> 
+<!------------------------------------------------------
+-segundo div del article (contiene el segundo producto)-
+------------------------------------------------------->
+          <div class="index-main-div1"> 
+<!-------------------------------
+-subtitulo (nombre del producto)-
+-------------------------------->          
             <h2 class="index-main-h2">Lattafa Asad</h2>
+<!----------------
+-img del producto-
+----------------->            
             <a href="index2.html"><img class="index-main-img" src="./img/PerfumeArabeAsad_mejor.png" alt="Lattafa Asad Hombre 3 Fragancias"></a>
+<!------
+-precio-
+------->            
             <p class="index-main-p">$60.000</p>
         </div>
-
-         <div class="index-main-div1"> 
-            <h2 class="index-main-h2">Lattafa Confidential
-</h2>
+<!----------------------------------------------------
+-tercer div del article (contiene el tercer producto)-
+----------------------------------------------------->
+          <div class="index-main-div1"> 
+<!-------------------------------
+-subtitulo (nombre del producto)-
+-------------------------------->          
+            <h2 class="index-main-h2">Lattafa Confidential</h2>
+<!----------------
+-img del producto-
+----------------->             
             <a href="index3.html"><img class="index-main-img" src="./img/PerfumeArabeEdp_mejor.png" alt="Lattafa Confidential Prívate Gold Edp"></a>
+<!------
+-precio-
+------->            
             <p class="index-main-p">$49.999</p>
         </div>
     </article>
 </main>
-
+<!------
+-footer-
+------->
  <footer class="d-flex flex-column justify-content-center align-items-center ">
-        
+<!----------------------
+-el subtitulo de footer-
+----------------------->       
         <h3 class="index-footer-h3">Redes</h3> 
 
         <div class="d-flex gap-2">
-
-        <div class="index-footer-logo">
+<!-----------------
+-logo de instagram-
+------------------>  
+        <div class="index-footer-logo">        
         <a class="index-footer-a" href="https://www.instagram.com/demian.achar/" target="_blank" title="Instagram"><img class="index-footer-img" src="./img/IgLogoo.png" alt="Instagram"></a>
         </div>
-
+<!-------------------
+-logo de de facebook-
+-------------------->  
         <div class="index-footer-logo">
         <a class="index-footer-a" href="https://www.facebook.com/demian.achar.1" target="_blank"><img class="index-footer-img" src="./img/FC.png" alt="Facebook"></a>
         </div>
