--- a/index3.html
+++ b/index3.html
@@ -3,30 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Perfume Lattafa Confidential</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-
+<!------
+-header-
+------->
 <header>
+<!-------------------------------------------------
+-navbar (la parte de arriba inicio, carrito, etc.)-
+-------------------------------------------------->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
+<!-----------------------
+-nombre/logo de mi marca-
+------------------------>
     <a class="navbar-brand" href="index.html">Natura Scent</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+<!------------
+-ul de navbar-
+-------------> 
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+<!-------------
+-btn de inicio-
+-------------->
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
         </li>
+<!---------------
+-btn del carrito-
+---------------->
         <li class="nav-item">
           <a class="nav-link" href="#">Carrito</a>
         </li>
       </ul>
+<!-------------------------------------
+-la barra de busqueda y btn del navbar-
+-------------------------------------->
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
         <button class="btn btn-outline-success" type="submit">Buscar</button>
@@ -36,18 +56,35 @@
 </nav>
 
 </header>
+<!----
+-main-
+----->
 <main>
+<!-----------------------------------------------
+-article que contiene el productos e informacion-
+------------------------------------------------>
     <article class="index1-main1-article01">
-
+<!-----------------------------------------------------
+-primer div del article (contiene la img del producto)-
+------------------------------------------------------> 
     <div class="index1-main1-div01">
         <img class="index1-main1-img" src="./img/PerfumeArabeEdp_mejor.png" alt="Lattafa Confidential">
     </div>
-
+<!-------------------------------------------------
+-segundo div del article (contiene la informacion)-
+-------------------------------------------------->
 <div class="index1-main-div02">
+<!-------------------------------
+-subtitulo (nombre del producto)-
+-------------------------------->
         <h2 class="index1-main1-h2" >Lattafa Confidential</h2>
-
+<!-----------------------
+-subtitulo (de la lista)-
+------------------------>
         <h5 class="index1-main1-h5" >🌟 Notas olfativas principales:</h5>
-
+<!-----------------------------------------------------------
+-primer ul del article que contiene informacion del producto-
+------------------------------------------------------------>
         <ul class="index1-main1-ul1">
           <li>🍊 Salida vibrante y fresca</li>
           <li>🌸 Corazón floral y especiado, equilibrado con sensualidad</li>
@@ -55,21 +92,34 @@
         </ul>
 
         <p class="index1-main1-p1">Máxima duración y proyección, adecuada para el día, la noche y ocasiones especiales.</p>
-
+<!-----------------------
+-subtitulo (de la lista)-
+------------------------>
         <h5 class="index1-main1-h5">🎯 ¿Por qué elegir Lattafa Confidential Private Gold?</h5>
-
+<!------------------------------------------------------------
+-segundo ul del article que contiene informacion del producto-
+------------------------------------------------------------->
         <ul class="index1-main1-ul1">
           <li>✔ Fragancia unisex: ideal tanto para mujeres como para hombres</li>
           <li>✔ Aroma intenso y duradero</li>
           <li>✔ Excelente proyección sin ser invasivo</li>
           <li>✔ Relación calidad-precio superior</li>
         </ul>
-
+<!------
+-precio-
+------->
         <p class="index1-main1-pre">$49.999</p>
-
+<!--------------------------
+-btn de "añadir al carrito"-
+--------------------------->
         <button class="index1-main1-btn1" >Añadir al carrito</button>
-
+<!----------------
+-btn de "comprar"-
+----------------->
         <a href="#modal-compra" class="index1-main1-btn2">Comprar</a>
+<!--------------
+-div de la card-
+---------------> 
     <div id="modal-compra" class="modal">
         <a href="#" class="overlay"></a>
 
@@ -85,37 +135,78 @@
     </div>
 </div>
     </article>
-
+<!-----------------------------------------------------------------------
+-div que contiene descripcion del producto (abajo del article principal)-
+------------------------------------------------------------------------>
     <div class="index1-main1-div03">
+<!---------------------------
+-subtitulo de la descripcion-
+---------------------------->
       <h2 class="index1-main1-h2-0">Descripcion:</h2>
-
+<!-----------
+-descripcion-
+------------>
       <p class="index1-main1-p2">Confidential Private Gold de Lattafa Perfumes es una fragancia de la familia olfativa Chipre Frutal para Hombres y Mujeres. Confidential Private Gold se lanzó en 2020. Las Notas de Salida son durazno (melocotón), maracuyá (fruta de la pasión), pera, frambuesa y casis (grosellero negro); la Nota de Corazón es lirio de los valles (muguete); las Notas de Fondo son almizcle, vainilla, sándalo, pachulí y heliotropo.</p>
     </div>
-
+<!---------------------------------------------
+-segundo article (muestra los demas productos)-
+---------------------------------------------->
     <article class="index1-main1-article02">
+<!-------------------------------
+-este div contiene el producto 1-
+--------------------------------> 
         <div class="index1-main1-div04"> 
+<!-----------------------------
+-subtitulo/nombre del producto-
+------------------------------>  
             <h2 class="index1-main1-h2-01">Lattafa Khamrah</h2>
-            <a href="index1.html"><img class="index-main-img" src="./img/perfumeArabe01_mejor.png" alt="Lattafa Khamrah Edp"></a>
+<!----------------
+-img del producto-
+-----------------> 
+            <a href="index1.html"><img class="index1-main1-img1" src="./img/perfumeArabe01_mejor.png" alt="Lattafa Khamrah Edp"></a>
+<!-------------------
+-precio del producto-
+-------------------->            
             <p class="index-main-p">$49.999</p>
         </div>
-
+<!-------------------------------
+-este div contiene el producto 2-
+-------------------------------->
         <div class="index1-main1-div04"> 
+<!-----------------------------
+-subtitulo/nombre del producto-
+------------------------------>
             <h2 class="index1-main1-h2-01">Lattafa Asad</h2>
+<!----------------
+-img del producto-
+----------------->
             <a href="index2.html"><img class="index1-main1-img1" src="./img/PerfumeArabeAsad_mejor.png" alt="Lattafa Asad Hombre 3 Fragancias"></a>
+<!-------------------
+-precio del producto-
+-------------------->
             <p class="index-main-p">$60.000</p>
         </div>
     </article>
 </main>
-
+<!------
+-footer-
+------->
 <footer class="d-flex flex-column justify-content-center align-items-center ">
-        
+<!----------------------
+-el subtitulo de footer-
+----------------------->         
         <h3 class="index-footer-h3">Redes</h3> 
 
     <div class="d-flex gap-2">
+<!-----------------
+-logo de instagram-
+------------------> 
       <div class="index-footer-logo">
         <a class="index-footer-a" href="https://www.instagram.com/demian.achar/" target="_blank" title="Instagram"><img class="index-footer-img" src="./img/IgLogoo.png" alt="Instagram"></a>
       </div>
-
+<!-------------------
+-logo de de facebook-
+-------------------->
       <div class="index-footer-logo">
         <a class="index-footer-a" href="https://www.facebook.com/demian.achar.1" target="_blank"><img class="index-footer-img" src="./img/FC.png" alt="Facebook"></a>
       </div>
